# db_10_my_project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
provider/: __init__.py  interfaces.py
provider/fdr/: provider.py
repository/: __init__.py  interfaces.py
repository/duckdb/: account.py  asset.py  connection.py  holding.py  join.py  price.py
repository/mysql/: account.py  asset.py  connection.py  holding.py  join.py  price.py
repository/oracle/: account.py  asset.py  connection.py  holding.py  join.py  price.py
repository/supabase/: account.py  asset.py  connection.py  holding.py  join.py  price.py
service/: __init__.py  finance_service.py
views/: __init__.py  asset_view.py  price_view.py
