[project]
name = "db-04-my-assets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "finance-datareader>=0.9.202",
    "flet>=0.85.1",
    "flet-charts>=0.85.1",
    "flet-datatable2>=0.85.1",
    "kaleido>=1.3.0",
    "oracledb>=4.0.1",
    "pandas>=3.0.3",
    "plotly-express>=0.4.1",
    "psycopg2-binary>=2.9.12",
    "pykrx>=1.0.51",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "yfinance>=1.4.0",
]
